cloud DB working

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-PGUSER=bhzjwwtc
-PGHOST=tu_host_de_elephantsql
-PGDATABASE=bhzjwwtc
-PGPASSWORD=g41J43tBn1bhyDznXH6K4YSwuWgGdyqW
-PGPORT=tu_puerto_de_elephantsql
+DATABASE_URL=postgres://bhzjwwtc:g41J43tBn1bhyDznXH6K4YSwuWgGdyqW@heffalump.db.elephantsql.com:5432/bhzjwwtc
+SESSION_SECRET=tu_secreto_para_sesiones
+
